# lre-experiment

./: .gitignore  CLAUDE.md  README.md  README_RAY.md  Untitled-2.ipynb  best_layers_summary.csv  data_utils.py  dataset_summary.csv  demo-offset-mapping-extraction.ipynb  demo.ipynb  lre-experiment-gemma3-270m.ipynb  lre-experiment-general tests llama.ipynb  lre-experiment-general tests mistral gpt2.ipynb  lre-experiment-general tests mistral.ipynb  lre-experiment-general tests.ipynb  lre-experiment-general-qwen3-0.6b copy 2.ipynb  lre-experiment-general-qwen3-0.6b copy 3.ipynb  lre-experiment-general-qwen3-0.6b copy 4.ipynb  lre-experiment-general-qwen3-0.6b.ipynb  lre-experiment-general.ipynb  lre-experiment-gpt2-xl.ipynb  lre-experiment-gpt2-xl2.ipynb  lre-experiment-gpt2.ipynb  lre-experiment-llama-3.2-1b.ipynb  lre-experiment-qwen3-0.6b.ipynb  lre.py  model-layer-inspect.ipynb  model_config.json  model_layer_info.json  pyproject.toml  qwen_experiments_config.json  ray_experiments.py  ray_plot_experiments.py  test-tokenization-extraction.ipynb
data/: data_sample.json
inprocess/: lre-experiment-general-qwen3-0.6b copy.ipynb  lre-experiment-general-qwen3-0.6b.ipynb
lre/: __init__.py  lre.py
saved_operators/: characteristic_gender_gemma-3-270m_layer3.pkl  degree_gender_gemma-3-270m_layer2.pkl  occupation_age_gemma-3-270m_layer10.pkl
