[project]
name = "lre-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "baukit",
    "ipykernel>=7.1.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[tool.uv.sources]
baukit = { git = "https://github.com/davidbau/baukit.git" }
